# mlops-in-a-can

./: .editorconfig  .gitignore  .prefectignore  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt
deployment/: deploy_blocks.py  deploy_flows.py
deployments/: hello_world.yaml
docker/images/datalake-init/: Dockerfile  entrypoint.sh
docker/images/prefect-server/: Dockerfile
docker/images/workflow-agent/: Dockerfile  entrypoint.sh
docker/images/workflow-server/: Dockerfile  entrypoint.sh
docker/images/workflow-server-init/: Dockerfile  deploy_blocks.py  entrypoint.sh
flows/: helloworld.py  prepare_dataset.py  shared.py  train.py  train_model.py
notebooks/: analyse_data.ipynb
src/reviewsclassifier/workflows/: common.py  prepare_dataset.py
